5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1723_2498.log
== TEST (2019-05-09 10:58:10) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	hA = (hA * pA)/100 + hA
	hb = (hB *pB)/100 + hB
	t = t + 1
print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:04) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	hA = (hA * pA) + hA
	hb = (hB *pB)+ hB
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:40) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	hA = ((hA * pA)/100) + hA
	hb = ((hB *pB)/100) + hB
	t = t + 1
print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:13) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
ha = (ha * pA)/100
hb = ((hB *pB)/100)
while (hA < hB):
	ha = ha + hA
	hb = hb + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ha = (ha * pA)/100
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:33) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
ha = (hA * pA)/100
hb = ((hB *pB)/100)
while (hA < hB):
	ha = ha + hA
	hb = hb + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ha = (ha * pA)/100
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:56) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
ha = (hA * pA)/100
hb = ((hB *pB)/100)
while (hA < hB):
	ha = ha + hA
	hb = hb + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ha = (ha * pA)/100
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:47) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
ha = (hA * pA)/100
hb = (hB *pB)/100
while (ha < hb):
	ha = ha + hA
	hb = hb + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ha = (ha * pA)/100
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:05:36) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	ha = (hB *pB)/100 + hA
	hb = (hB *pB)/100 + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ha = (ha * pA)/100
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:07:19) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	a = (hB *pB)/100
	hA = hA + a
	b = (hB *pB)/100
	hB = b + hB
	t = t + 1
print(t)
-- OUTPUT:
365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:08:25) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pA = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	ca = (hA *pA)/100
	hA = hA + a
	cb = (hB *pB)/100
	hB = b + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    hA = hA + a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:08:53) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pA = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	a = (hA *pA)/100
	hA = hA + a
	b = (hB *pB)/100
	hB = b + hB
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    b = (hB *pB)/100
NameError: name 'pB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:09:10) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	a = (hA *pA)/100
	hA = hA + a
	b = (hB *pB)/100
	hB = b + hB
	t = t + 1
print(t)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:09:25) 
-- CODE:
hA = float(input("Insira a qtd de habitantes da cidade A: "))
hB = float(input("Insira a qtd de habitantes da cidade B: "))
pA = float(input("Insira a taxa de crescimento: "))
pB = float(input("Insira a taxa de crescimento: "))
t = 0
while (hA < hB):
	a = (hA *pA)/100
	hA = hA + a
	b = (hB *pB)/100
	hB = b + hB
	t = t + 1
print(t)
-- EXECUTION TIME:
0.184625
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
